WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
201511
[LFC] LayoutState should not need the initial containing block
https://bugs.webkit.org/show_bug.cgi?id=201511
Summary
[LFC] LayoutState should not need the initial containing block
alan
Reported
2019-09-05 12:36:09 PDT
Throw-away layouts should be just work with subtrees
Attachments
Patch
(9.99 KB, patch)
2019-09-05 12:40 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(12.75 KB, patch)
2019-09-05 13:14 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2019-09-05 12:36:27 PDT
<
rdar://problem/55079241
>
alan
Comment 2
2019-09-05 12:40:23 PDT
Created
attachment 378104
[details]
Patch
alan
Comment 3
2019-09-05 13:14:02 PDT
Created
attachment 378109
[details]
Patch
WebKit Commit Bot
Comment 4
2019-09-05 14:29:21 PDT
Comment on
attachment 378109
[details]
Patch Clearing flags on attachment: 378109 Committed
r249545
: <
https://trac.webkit.org/changeset/249545
>
WebKit Commit Bot
Comment 5
2019-09-05 14:29:22 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug