[LFC] LayoutState should not need the initial containing block https://bugs.webkit.org/show_bug.cgi?id=201511 <rdar://problem/55079241>

Reviewed by Antti Koivisto.

Throw-away layouts should just be able to initialize a dedicated LayoutState without passing in the ICB.

* layout/LayoutState.cpp:
(WebCore::Layout::LayoutState::markNeedsUpdate):
(WebCore::Layout::LayoutState::run):
(WebCore::Layout::LayoutState::LayoutState): Deleted.
* layout/LayoutState.h:
(WebCore::Layout::LayoutState::initialContainingBlock const): Deleted.
* layout/Verification.cpp:
(WebCore::Layout::LayoutState::verifyAndOutputMismatchingLayoutTree const):
* layout/floats/FloatingContext.cpp: Fix a (very sad)typo.
(WebCore::Layout::FloatingContext::constraints const):
* layout/layouttree/LayoutTreeBuilder.cpp:
(WebCore::Layout::printLayoutTreeForLiveDocuments):


Canonical link: https://commits.webkit.org/215147@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@249545 268f45cc-cd09-0410-ab3c-d52691b4dbfc